# tee-substrate-service

./: .editorconfig  .envrc  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  proj.mk
.github/workflows/: build.yml  ci.yml
REE/: Cargo.toml  Makefile
REE/.cargo/: config
REE/common/host-app/: Cargo.toml  README.md
REE/common/host-app/src/: lib.rs
REE/lib/: Cargo.toml
REE/lib/host/: Cargo.toml
REE/lib/host/src/: lib.rs  optee_handler.rs
REE/lib/src/: ci.rs  lib.rs  logic.rs  optee_handler.rs  utils.rs
REE/lib/src/ci/: client.rs
TEE/: Cargo.toml  Makefile
TEE/common/ta-app/: Cargo.toml
TEE/common/ta-app/afl-fuzz/: Cargo.toml
TEE/common/ta-app/afl-fuzz/src/: main.rs
TEE/common/ta-app/fuzz/: Cargo.toml
TEE/common/ta-app/fuzz/fuzz_targets/: fuzz_target_1.rs  raw_ta.rs
TEE/common/ta-app/src/: crypto.rs  lib.rs  tests.rs  util.rs
TEE/common/ta-app/src/crypto/: ecdsa.rs  ed25519.rs  secrets.rs  sr25519.rs
TEE/lib/: Cargo.toml
TEE/lib/include/: rustee_ta.h
TEE/lib/src/: lib.rs  optee.rs
TEE/lib/ta/: Cargo.toml
TEE/lib/ta/src/: lib.rs
c_host/: Makefile  appmain.h  main.c
c_ta/: Makefile  newuuid.py  sub.mk  user_ta_header_defines.h
common/optee-common/: Cargo.toml
common/optee-common/src/: lib.rs  serde.rs  tee_error.rs  types.rs
common/optee-common/src/serde/: alloc_impl.rs  common_impl.rs  core_impl.rs  schnorrkel_impl.rs  sp.rs
host/: Cargo.toml
host-common/: Cargo.toml
host/include/: librustee_host.h
host/src/: lib.rs  optee_handler.rs
host_app/: Cargo.toml
host_app/src/: lib.rs
jsonrpc/zkms/: Cargo.toml
jsonrpc/zkms/src/: lib.rs
optee-common/: Cargo.toml
optee-common/src/: lib.rs
substrate/: Cargo.toml  libs
substrate/keystore/: Cargo.toml
substrate/keystore/src/: cryptostore.rs  lib.rs  scope.rs  synccryptostore.rs
ta/: Cargo.toml
ta/include/: librustee_ta.h
ta/src/: lib.rs  optee.rs
ta_app/: Cargo.toml
ta_app/src/: lib.rs  util.rs
zkms-common/: Cargo.toml
zkms-common/src/: jsonrpc_request.rs  lib.rs  protocol.rs
