 [workspace]
 members = ["lib", "common/ta-app",
            "deps/ta-common"]
 
 resolver = "2"

[profile.release]
lto = true
codegen-units = 1
debug = true
opt-level = "z"
panic = "abort"

[profile.dev]
panic = "abort"

[patch.crates-io]
sp-keystore = { git = "https://github.com/Zondax/substrate", branch = "teekeystore" }
sp-core = { git = "https://github.com/Zondax/substrate", branch = "teekeystore" }
