[package]
name = "zkms-common"
authors = ["Zondax GmbH <info@zondax.ch>"]
description = "Common definitions for zkms-client and zkms-server"
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
version = "0.1.0" 

[features]
serde = ["serde_", "schnorrkel/serde"]

[dependencies]
serde_ = { version = "1.0.115", features = ["derive"], package = "serde", optional = true }
schnorrkel = { version = "0.9.2", features = ["u64_backend"], default-features = false }

[build-dependencies]
