[package]
authors = ["Zondax GmbH <info@zondax.ch>"]
name = "rustee_host"
version = "0.1.0"
edition = "2018"
readme = "README.md"
resolver = "2"

[lib]
name = "rustee_host"
crate-type = ["staticlib"]

[dependencies]
zondee-teec = { version = "0.1.0", path = "../../framework/crates/zondee-teec"  }

log = "0.4"
env_logger = "0.8.3"
