[package]
authors = ["Zondax GmbH <info@zondax.ch>"]
name = "rustee_host"
version = "0.1.0"
edition = "2018"
readme = "README.md"
resolver = "2"

[lib]
name = "rustee_host"
crate-type = ["staticlib"]

[features]
#ci = ["host-jsonrpc/ci", "jsonrpc-core-client", "zkms-jsonrpc"]

[dependencies]
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0.41"
parking_lot = "0.11.0"
hex = "0.4.2"
libc = "0.2.80"

log = "0.4"
env_logger = "0.8.3"

zkms-common = { version = "0.1.0",  path = "../deps/zkms-common" }
host-app = { version = "0.1.0", path = "../common/host-app" }
optee-common = { version = "0.1.0", path = "../../common/optee-common", features = ["sp"] }
zondee-teec = { version = "0.1.0", path = "../../framework/crates/zondee-teec" }
schnorrkel = { version = "0.10", features = ["u64_backend"], default-features = false }

tokio = { version = "0.2", features = ["rt-threaded", "dns"] }
host-ductile = { version = "0.1", path = "../deps/ductile/host" }
futures = { version = "0.3" }

#ci
zkms-ductile = { version = "0.1", path = "../deps/ductile/zkms", optional = true }
cfg-if = "1"
