[package]
authors = ["Zondax GmbH <info@zondax.ch>"]
name = "rustee_ta"
version = "0.1.0"
edition = "2018"
readme = "README.md"
resolver = "2"

[lib]
name = "rustee_ta"
crate-type = ["staticlib"]

[dependencies]
zondee-utee = { version = "0.1.0", features = ["rand_core"], git = "https://github.com/Zondax/hello-rustee", branch = "dev" }
log = "0.4"

[target.armv7-unknown-linux-gnueabihf.dev-dependencies]
panic-halt = "0.2.0"

[dev-dependencies]
