[package]
name = "optee-common"
version = "0.1.0"
authors = ["Zondax GmbH <support@zondax.ch>"]
edition = "2018"

[features]
default = ["alloc"]
alloc = ["no-std-compat/alloc"]
sp = ["sp-keystore", "sp-core", "alloc", "no-std-compat/std"]

[lib]
name = "optee_common"
crate-type = ["rlib"]

[dependencies]
no-std-compat = "0.4.1"
schnorrkel = { version = "0.10", features = ["u64_backend"], default-features = false }

arbitrary = { version = "1", features = ["derive"], optional = true }
sp-keystore = { version = "0.9", default-features = false, optional = true }
sp-core = { version = "3.0.0", default-features = false, optional = true }

[patch.crates-io]
sp-keystore = { git = "https://github.com/Zondax/substrate", branch = "teekeystore" }
sp-core = { git = "https://github.com/Zondax/substrate", branch = "teekeystore" }
