[package]
name = "zkms-jsonrpc"
version = "0.1.0"
authors = ["becominginsane <francesco@zondax.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zkms-common = { version = "0.1", path = "../../zkms-common", features = ["serde_"] }
jsonrpc-derive = "17"
jsonrpc-core = "17"
