[package]
name = "host-app"
authors = ["Zondax GmbH <support@zondax.ch>"]
description = "Provides useful CLI commands to manage zkms servers"
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
version = "0.1.0"

[dependencies]
zkms-common = { version = "0.1.0", path = "../../deps/zkms-common" }
host-common = { version = "0.1", path = "../../deps/host-common" }
log = "0.4"
futures = "0.3"
