[package]
authors = ["Zondax GmbH <info@zondax.ch>"]
name = "rustee_host"
version = "0.1.0"
edition = "2018"
readme = "README.md"
resolver = "2"

[lib]
name = "rustee_host"
crate-type = ["staticlib"]

[dependencies]
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0.41"
parking_lot = "0.11.0"
hex = "0.4.2"
libc = "0.2.80"

zkms-common = { version = "0.1.0",  path = "../zkms-common" }
host-app = { version = "0.1.0", path = "../host_app" }
optee-common = { version = "0.1.0", path = "../optee-common" }
zondee-teec = { version = "0.1.0", git = "https://github.com/Zondax/hello-rustee", branch = "simple_tee_0.3.12"  }
schnorrkel = { version = "0.10", features = ["u64_backend"], default-features = false }

tokio = { version = "1", features = ["rt", "net"] }
host-jsonrpc = { version = "0.1", path = "../jsonrpc/host" }
