[package]
authors = ["Zondax GmbH <info@zondax.ch>"]
name = "rustee_host"
version = "0.1.0"
edition = "2018"
readme = "README.md"
resolver = "2"

[lib]
name = "rustee_host"
crate-type = ["staticlib"]

[dependencies]
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0.41"
parking_lot = "0.11.0"
hex = "0.4.2"
libc = "0.2.80"

log = "0.4"
env_logger = "0.8.3"

zkms-common = { version = "0.1.0",  path = "../../deps/zkms-common" }
host-app = { version = "0.1.0", path = "../../common/host-app" }
optee-common = { version = "0.1.0", path = "../../../common/optee-common", features = ["std"] }
zondee-teec = { version = "0.1.0", git = "https://github.com/Zondax/hello-rustee", branch = "simple_tee_0.3.12"  }
schnorrkel = { version = "0.10", features = ["u64_backend"], default-features = false }

tokio = { version = "0.2", features = ["rt-threaded", "dns"] }
host-jsonrpc = { version = "0.1", path = "../../deps/jsonrpc/host" }
